k8s/base-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: base-service
  template:
    metadata:
      labels:
        app: base-service
    spec:
      containers:
        - name: base-service
          image: nzhussup/base-service:latest
          ports:
            - containerPort: 8010
---
apiVersion: v1
kind: Service
metadata:
  name: base-service
spec:
  type: ClusterIP
  ports:
    - port: 8010
      targetPort: 8010
  selector:
    app: base-service
