k8s/panel-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: panel-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: panel-api-deployment
  template:
    metadata:
      labels:
        app: panel-api-deployment
    spec:
      containers:
        - name: panel-api
          image: nzhussup/panel-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: panel-api-service
spec:
  type: ClusterIP
  ports:
    - port: 8010
      targetPort: 8080
  selector:
    app: panel-api-deployment
