k8s/panel-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: panel-frontend-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: panel-frontend-deployment
  template:
    metadata:
      labels:
        app: panel-frontend-deployment
    spec:
      containers:
        - name: panel-frontend-deployment
          image: nzhussup/panel-frontend:latest
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: panel-frontend-service
  namespace: default
spec:
  selector:
    app: panel-frontend-deployment
  ports:
    - protocol: TCP
      port: 8020
      targetPort: 8000
  type: ClusterIP
  externalTrafficPolicy: Local
