k8s/photo-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photo-service
  template:
    metadata:
      labels:
        app: photo-service
    spec:
      containers:
        - name: photo-service
          image: nzhussup/photo-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: photo-service
spec:
  selector:
    app: photo-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
