k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-default
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: nzhussup.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: personal-react-website-service
                port:
                  number: 8000
    - host: api.nzhussup.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: panel-api-service
                port:
                  number: 8010
    - host: admin.nzhussup.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: panel-frontend-service
                port:
                  number: 8010

  tls:
    - hosts:
        - nzhussup.com
        - api.nzhussup.com
        - admin.nzhussup.com
      secretName: default-tls
